--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,14 +1,14 @@
 apiVersion: fleet.cattle.io/v1alpha1
 kind: GitRepo
 metadata:
-  name: PROVIDER-REGION-ENVIRONMENT-TEAM
+  name: aws-usea1-qa-shared
   namespace: fleet-local
   annotations:
-    field.cattle.io/description: PROVIDER-REGION-ENVIRONMENT-TEAM Fleet GitRepos
+    field.cattle.io/description: aws-usea1-qa-shared Fleet GitRepos
 spec:
   branch: main
   clientSecretName: gitlab-caas-ops
-  repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/fleet/PROVIDER-REGION-ENVIRONMENT-TEAM.git
+  repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/fleet/aws-usea1-qa-shared.git
   targets:
     - name: all
       clusterSelector: {}
