--- a/values.yaml
+++ b/values.yaml
@@ -12,32 +12,330 @@ commonLabels: {}
 
 # -- Fleet [ClusterGroups](https://fleet.rancher.io/cluster-group)
 # @default -- see [values](values.yaml)
-clustergroups:
-  - name: test
-    create: true
-    description: Test
-    annotations:
-      foo: bar
-    labels:
-      foo: bar
-    selector:
-      matchLabels:
-        foo: bar
+clustergroups: []
 
 # -- Fleet [GitRepos](https://fleet.rancher.io/gitrepo-add)
 # @default -- see [values](values.yaml)
 gitrepos:
-  - name: test
+  - name: calico-networkpolicy
     create: true
-    description: Test
-    annotations:
-      foo: bar
-    labels:
-      foo: bar
+    description: Calico (Network Policy Engine)
     spec:
-      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/test.git
-      revision: 1.0.0
+      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-calico-networkpolicy.git
+      revision: 0.0.27
+      clientSecretName: gitlab-caas-ops
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: cert-manager
+    create: true
+    description: JetStack Certificate Manager
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
+      revision: 1.0.154
+      paths:
+        - cert-manager
+      clientSecretName: gitlab-caas-ops
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: cert-manager-issuers
+    create: true
+    description: Cert-Manager Cluster Issuers
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-issuers.git
+      revision: 1.2.14
+      clientSecretName: gitlab-caas-ops
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: cluster-autoscaler
+    create: true
+    description: Cluster Autoscaler
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
+      revision: 1.0.154
+      paths:
+        - cluster-autoscaler
+      clientSecretName: gitlab-caas-ops
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: dnsrecords
+    create: true
+    description: DNS records managed by External DNS
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-dnsrecords.git
+      revision: 1.0.35
+      clientSecretName: gitlab-caas-ops
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: ebs-csi-driver
+    create: true
+    description: EBS CSI Driver
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
+      revision: 1.0.154
+      paths:
+        - aws-ebs-csi-driver
+      clientSecretName: gitlab-caas-ops
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: external-dns
+    create: false
+    description: External DNS
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
+      branch: external-dns
+      paths:
+        - external-dns
+      clientSecretName: gitlab-caas-ops
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: ingress-nginx
+    create: true
+    description: NginX Ingress Controller
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
+      revision: 1.0.154
+      paths:
+        - ingress-nginx
+      clientSecretName: gitlab-caas-ops
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: metrics-server
+    create: true
+    description: Metrics Server
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
+      revision: 1.0.154
+      paths:
+        - metrics-server
+      clientSecretName: gitlab-caas-ops
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  # - name: opa-library
+  #   create: false
+  #   description: OPA Library
+  #   spec:
+  #     repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-opalibrary.git
+  #     revision: 0.0.14
+  #     clientSecretName: gitlab-caas-ops
+  #     targets:
+  #       - name: all
+  #         clusterSelector: {}
+
+  # - name: rancher-gatekeeper
+  #   create: false
+  #   description: Rancher OPA Gatekeeper
+  #   spec:
+  #     repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
+  #     revision: 1.0.138
+  #     paths:
+  #       - rancher-gatekeeper-crd
+  #       - rancher-gatekeeper
+  #     clientSecretName: gitlab-caas-ops
+  #     targets:
+  #       - name: all
+  #         clusterSelector: {}
+
+  # - name: siemens-opa
+  #   create: false
+  #   description: Siemens OPA Constraints
+  #   spec:
+  #     repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-opa.git
+  #     revision: 1.0.22
+  #     clientSecretName: gitlab-caas-ops
+  #     targets:
+  #       - name: all
+  #         clusterSelector: {}
+
+  - name: sealed-secrets-controller
+    create: true
+    description: Bitnami Sealed Secrets controller
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
+      revision: 1.0.154
+      paths:
+        - sealed-secrets
+      clientSecretName: gitlab-caas-ops
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: sealed-secrets-restarter
+    create: true
+    description: Sealed Secrets Controller Restarter (Cronjob)
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-sealed-secrets-restarter.git
+      revision: 0.0.6
+      clientSecretName: gitlab-caas-ops
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: secrets
+    create: true
+    description: KaaS SealedSecrets
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-secrets.git
+      revision: 1.1.20
+      clientSecretName: gitlab-caas-ops
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: snapshot-controller
+    create: true
+    description: CSI Snapshot Controller
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
+      revision: 1.0.154
+      paths:
+        - snapshot-controller
+        - snapshot-validation-webhook
+      clientSecretName: gitlab-caas-ops
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: storageclasses
+    create: true
+    description: Storage Classes and Volume Snapshot Classes
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-storageclasses.git
+      revision: 1.0.26
+      clientSecretName: gitlab-caas-ops
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: velero
+    create: true
+    description: Velero Backups
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
+      revision: 1.0.154
+      paths:
+        - velero
+      clientSecretName: gitlab-caas-ops
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  ### Add XCR team's application STARTS here
+
+  - name: xcr-foundation
+    create: true
+    description: Chimera Foundation chart
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/foundation.git
+      revision: 1.1.4
       clientSecretName: gitlab
       targets:
         - name: all
           clusterSelector: {}
+
+  - name: xcr-logging
+    create: true
+    description: XCR Logging stack for rancher cluster
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/logging.git
+      revision: 1.0.27
+      clientSecretName: gitlab
+      paths:
+        - logging-crd
+        - logging-chart
+        - ns-logging-obj
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: xcr-loki
+    create: true
+    description: XCR Loki stack for rancher cluster
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/loki.git
+      revision: 1.0.28
+      clientSecretName: gitlab
+      paths:
+        - loki
+        - loki-canary
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: xcr-monitoring
+    create: true
+    description: XCR Monitoring stack for rancher cluster
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/monitoring.git
+      revision: 1.2.69
+      clientSecretName: gitlab
+      paths:
+        - monitoring-charts
+        - service-account
+        - blackbox
+        - grafana_resources
+        - alertmanager_config
+        - grafana_dashboards
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: xcr-hnc
+    create: true
+    description: HNC for preprod
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/hnc.git
+      revision: 2.0.7
+      paths:
+        - hnc
+        - hnc-backup
+      clientSecretName: gitlab
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: xcr-aqua-enforcer
+    create: true
+    description: XCR aqua enforcer charts
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/aqua.git
+      revision: 0.0.11
+      clientSecretName: gitlab
+      paths:
+        - aqua-enforcer
+      # Deploy to all Prod clusters in AWS
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  - name: xcr-aqua-kube-enforcer
+    create: true
+    description: XCR aqua enforcer charts
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/aqua.git
+      revision: 0.0.11
+      clientSecretName: gitlab
+      paths:
+        - kube-enforcer
+      targets:
+        - name: all
+          clusterSelector: {}
+
+  ### XCR team's application ENDS here
