--- a/values.yaml
+++ b/values.yaml
@@ -299,6 +299,19 @@ gitrepos:
         - name: all
           clusterSelector: {}
 
+  - name: xcr-aqua-enforcer
+    create: true
+    description: XCR aqua enforcer charts
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/aqua.git
+      branch: main
+      clientSecretName: gitlab
+      paths:
+        - aqua-enforcer
+      targets:
+        - name: all
+          clusterSelector: {}
+
   - name: xcr-argocd-sa
     create: true
     description: XCR ArgoCD SA chart
