--- a/values.yaml
+++ b/values.yaml
@@ -386,6 +386,7 @@ gitrepos:
       clientSecretName: gitlab
       paths:
         - ovp-app-chart
+        - ovp-addons
       targets:
         - name: all
           clusterSelector: {}
