add ovp dashboard

--- a/values.yaml
+++ b/values.yaml
@@ -387,6 +387,7 @@ gitrepos:
       paths:
         - ovp-app-chart
         - ovp-addons
+        - ovp-dashboard
       targets:
         - name: all
           clusterSelector: {}
