Update DD to revision: 1.0.244

--- a/values.yaml
+++ b/values.yaml
@@ -70,8 +70,7 @@ gitrepos:
     description: Datadog Agent
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
-      #revision: 1.0.225
-      branch: multi-line-support
+      revision: 1.0.244
       paths:
         - datadog
       clientSecretName: gitlab-caas-ops
