--- a/values.yaml
+++ b/values.yaml
@@ -293,7 +293,7 @@ gitrepos:
     description: XCR aqua enforcer charts
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/aqua.git
-      branch: main
+      branch: XCD-2137
       clientSecretName: gitlab
       paths:
         - kube-enforcer
@@ -307,7 +307,7 @@ gitrepos:
     description: XCR aqua enforcer charts
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/aqua.git
-      branch: main
+      branch: XCD-2137
       clientSecretName: gitlab
       paths:
         - aqua-enforcer
