--- a/values.yaml
+++ b/values.yaml
@@ -133,7 +133,7 @@ gitrepos:
     description: Rancher OPA Gatekeeper
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
-      revision: 1.0.268
+      revision: XCR-2518
       paths:
         - rancher-gatekeeper-crd
         - rancher-gatekeeper
