--- a/values.yaml
+++ b/values.yaml
@@ -231,7 +231,7 @@ gitrepos:
     description: Velero Backups
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
-      revision: 1.0.278
+      revision: hotfix/disable-velero-upgrade-crd
       paths:
         - velero
       clientSecretName: gitlab-caas-ops
