Update DD to branch: XCR-3106

--- a/values.yaml
+++ b/values.yaml
@@ -70,7 +70,8 @@ gitrepos:
     description: Datadog Agent
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
-      revision: 1.0.281
+      #revision: 1.0.281
+      branch: XCR-3106
       paths:
         - datadog
       clientSecretName: gitlab-caas-ops
