--- a/values.yaml
+++ b/values.yaml
@@ -70,8 +70,7 @@ gitrepos:
     description: Datadog Agent
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
-      #revision: 1.0.281
-      branch: XCR-3106
+      revision: 1.0.284
       paths:
         - datadog
       clientSecretName: gitlab-caas-ops
