--- a/values.yaml
+++ b/values.yaml
@@ -22,7 +22,7 @@ gitrepos:
     description: Calico (Network Policy Engine)
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-calico-networkpolicy.git
-      revision: 0.0.27
+      revision: upgrade-calico-3.26
       clientSecretName: gitlab-caas-ops
       targets:
         - name: all
