--- a/values.yaml
+++ b/values.yaml
@@ -321,7 +321,7 @@ gitrepos:
     description: XCR aqua enforcer charts
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/aqua.git
-      branch: datadog-labeling
+      branch: main
       clientSecretName: gitlab
       paths:
         - kube-enforcer
@@ -335,7 +335,7 @@ gitrepos:
     description: XCR aqua enforcer charts
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/aqua.git
-      branch: datadog-labeling
+      branch: main
       clientSecretName: gitlab
       paths:
         - aqua-enforcer
