--- a/values.yaml
+++ b/values.yaml
@@ -316,20 +316,20 @@ gitrepos:
         - name: all
           clusterSelector: {}
 
-  # - name: xcr-aqua-kube-enforcer
-  #   create: true
-  #   description: XCR aqua enforcer charts
-  #   spec:
-  #     repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/aqua.git
-  #     branch: XCD-2137
-  #     clientSecretName: gitlab
-  #     helmSecretName: helm-external-charts
-  #     paths:
-  #       - kube-enforcer
-  #       - kube-enforcer-certs
-  #     targets:
-  #       - name: all
-  #         clusterSelector: {}
+  - name: xcr-aqua-kube-enforcer
+    create: true
+    description: XCR aqua enforcer charts
+    spec:
+      repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/aqua.git
+      branch: XCD-2137
+      clientSecretName: gitlab
+      helmSecretName: helm-external-charts
+      paths:
+        - kube-enforcer
+        - kube-enforcer-certs
+      targets:
+        - name: all
+          clusterSelector: {}
 
   - name: xcr-aqua-enforcer
     create: true
