--- a/values.yaml
+++ b/values.yaml
@@ -321,7 +321,7 @@ gitrepos:
     description: XCR aqua enforcer charts
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/aqua.git
-      branch: XCD-2137
+      branch: main
       clientSecretName: gitlab
       helmSecretName: helm-external-charts
       paths:
