--- a/values.yaml
+++ b/values.yaml
@@ -308,7 +308,7 @@ gitrepos:
       repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/banzaicloud-vault-webhook.git
       branch: main
       clientSecretName: gitlab
-      helmSecretName: helm-external-charts
+      helmSecretName: helm-external-charts-false
       paths:
         - vault-secrets-webhook-chart
         - banzai-webhook-addons
