--- a/values.yaml
+++ b/values.yaml
@@ -33,7 +33,7 @@ gitrepos:
     description: JetStack Certificate Manager
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
-      revision: upgrade-cert-manager-version-to-1.13.0 #revision 1.0.316
+      revision: upgrade-cert-manager-version-to-1.13.0  #revision v1.0.318
       paths:
         - cert-manager
       clientSecretName: gitlab-caas-ops
