Disable old obsolete observability resources

--- a/values.yaml
+++ b/values.yaml
@@ -251,24 +251,24 @@ gitrepos:
         - name: all
           clusterSelector: {}
 
-  - name: xcr-monitoring
-    create: true
-    description: XCR Monitoring stack for rancher cluster
-    spec:
-      repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/monitoring.git
-      branch: main
-      clientSecretName: gitlab
-      helmSecretName: helm-external-charts
-      paths:
-        - monitoring-charts
-        - service-account
-        - blackbox
-        - grafana_resources
-        - alertmanager_config
-        - grafana_dashboards
-      targets:
-        - name: all
-          clusterSelector: {}
+#  - name: xcr-monitoring
+#    create: true
+#    description: XCR Monitoring stack for rancher cluster
+#    spec:
+#      repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/monitoring.git
+#      branch: main
+#      clientSecretName: gitlab
+#      helmSecretName: helm-external-charts
+#      paths:
+#        - monitoring-charts
+#        - service-account
+#        - blackbox
+#        - grafana_resources
+#        - alertmanager_config
+#        - grafana_dashboards
+#      targets:
+#        - name: all
+#          clusterSelector: {}
 
   - name: xcr-vault-secrets-webhook
     create: true
