--- a/values.yaml
+++ b/values.yaml
@@ -364,7 +364,7 @@ gitrepos:
     description: OVP app for env testing
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/ovp-app.git
-      revision: 1.0.44
+      revision: podinfo-chart-update
       clientSecretName: gitlab
       paths:
         - ovp-app-chart
