--- a/values.yaml
+++ b/values.yaml
@@ -33,7 +33,7 @@ gitrepos:
     description: JetStack Certificate Manager
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
-      revision: 1.0.333
+      revision: eadfaa66512d9114c732a6f1ec085be4111af573
       paths:
         - cert-manager
       clientSecretName: gitlab-caas-ops
