--- a/values.yaml
+++ b/values.yaml
@@ -270,7 +270,7 @@ gitrepos:
     description: XCR aqua enforcer charts
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/aqua.git
-      branch: main
+      branch: limits-enforcer
       clientSecretName: gitlab
       helmSecretName: helm-external-charts
       paths:
@@ -285,7 +285,7 @@ gitrepos:
     description: XCR aqua enforcer charts
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/chimera/kubernetes/fleet/aqua.git
-      branch: main
+      branch: limits-enforcer
       clientSecretName: gitlab
       helmSecretName: helm-external-charts
       paths:
