--- a/values.yaml
+++ b/values.yaml
@@ -33,6 +33,7 @@ gitrepos:
     description: JetStack Certificate Manager
     spec:
       repo: https://gitlab.industrysoftware.automation.siemens.com/caas-ops/helm-external.git
+      revision: 0b8f7d28ea84a3e8bdd6b1f3fa9445b3c8fb68e8
       branch: bump-up-cert-manager-version
       paths:
         - cert-manager
